--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Title of the document</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Employee Directory</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
-
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
     </head>
 
     <body>
-        <h1>Hello World</h1>
-        <button onclick="change()"> Change </button>
-   
-        <script src="main.js" type="text/javascript"></script>
+        <div class="main">
+          
+            <section class="employee-cards">
+                    <h3>Awesome Startup Employee Directory</h3>
+            </section>
+        </div>
+      <script src="main.js"></script>
     </body>
 
 </html>
