--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
     <body>
         <div class="main">
-          
             <section class="employee-cards">
                     <h3>Awesome Startup Employee Directory</h3>
             </section>
         </div>
+        <div class="modal-div"></div>
+
       <script src="main.js"></script>
     </body>
 
