added ability to go through each modal of employee

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <title>Employee Directory</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     </head>
 
     <body>
         <div class="main">
             <section class="employee-cards">
-                    <h3>Awesome Startup Employee Directory</h3>
+                <h3>Awesome Startup Employee Directory</h3>
+                <div class="modal-div">
+                </div>
             </section>
+            <div id="modal"></div>
         </div>
-        <div class="modal-div"></div>
+        
 
       <script src="main.js"></script>
     </body>
