--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="main">
             <section class="employee-cards">
-                <h3>Awesome Startup Employee Directory</h3>
+                <h3>Employee Directory</h3>
                 <div class="modal-div">
                 </div>
             </section>
